# backup

./: # This file will help us debug the missi.cmake  CMakeLists.txt  vcpkg.json
.github/workflows/: android.yml
cmake/: Package.cmake  debug-cmake.cmake  sigpac-go-config.cmake.in
images/: images.qrc
platform/android/: AndroidManifest.xml.in  CPackAndroidDeployQt.cmake.in  build.gradle.in
platform/android/res/values/: colors.xml  strings.xml
platform/android/res/xml/: file_paths.xml
platform/android/src/ch/opengis/qfield/: QFieldActivity.java
platform/android/src/com/imagrieng/sigpacgo/: SigpacgoActivity.java  SigpacgoCloudService.java  SigpacgoPositioningService.java  SigpacgoUtils.java
resources/: resources.qrc
scripts/: build-vcpkg.sh  copy-material-icons.sh  create-images.sh  create-qt-translations.sh
scripts/ci/: env_gh.sh  generate-version-details.sh
src/app/: CMakeLists.txt  android-deployment-settings.json.in  debug-cmake.cmake  main.cpp  src_app_android-deployment-settings.json.in
src/core/: CMakeLists.txt  localfilesimageprovider.cpp  qgismobileapp.cpp
src/core/locator/: activelayerfeatureslocatorfilter.cpp  featureslocatorfilter.cpp
src/qml/imports/Theme/: Theme.qml
src/service/: CMakeLists.txt  qfieldcloudservice.h  qfieldpositioningservice.h  sigpac-go-config.cmake.in
